--- a/starter/webcrawler/src/main/config/sample_config_sequential.json
+++ b/starter/webcrawler/src/main/config/sample_config_sequential.json
@@ -2,8 +2,9 @@
   "startPages": ["https://www.udacity.com/"],
   "ignoredUrls": ["https://blog.udacity.com/.*"],
   "ignoredWords": ["^.{1,3}$"],
-  "implementationOverride": "com.udacity.webcrawler.SequentialWebCrawler",
+  "parallelism": 4,
   "maxDepth": 50,
   "timeoutSeconds": 1,
-  "popularWordCount": 5
+  "popularWordCount": 5,
+  "profileOutputPath": "profileData.txt"
 }
